[package]
name = "rscode"
version = "0.1.0"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-const-fn-init = "0.1"
proptest = "1"
proptest-derive = "0.3"
